--- a/dashboard.html
+++ b/dashboard.html
@@ -22,8 +22,9 @@
 
 <body>
     <div class="dashboard-layout">
-        <!-- Sidebar -->
-        <aside class="sidebar">
+        <!-- Sidebar with INLINE STYLES for mobile -->
+        <aside class="sidebar"
+            style="position: fixed; left: -280px; top: 0; bottom: 0; width: 280px; z-index: 1050; transition: left 0.3s ease; box-shadow: 2px 0 10px rgba(0,0,0,0.3);">
             <div class="sidebar-header">
                 <div class="sidebar-logo">🏠 Gestão de Flats</div>
             </div>
@@ -66,8 +67,10 @@
             </div>
         </aside>
 
-        <!-- Mobile Overlay -->
-        <div class="sidebar-overlay"></div>
+        <!-- Mobile Overlay with INLINE STYLES -->
+        <div class="sidebar-overlay"
+            style="display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.5); z-index: 1049;">
+        </div>
 
         <!-- Main Content -->
         <main class="main-content">
